--- a/frege/build
+++ b/frege/build
@@ -5,8 +5,9 @@ echo 'Building...'
 
 echo 'Minifying js...'
 cd /home/eliranh/frege/frege2/frege/logic/static/logic/js
-uglifyjs requests.js -m toplevel -c  -r 'postAns' > requests.min.js
-uglifyjs deduction.js -m toplevel -c  -r 'oncheck' > deduction.min.js
+uglifyjs requests.js -m toplevel -c -r 'postAns' > requests.min.js
+uglifyjs deduction.js -m toplevel -c -r 'oncheck,addRow' > deduction.min.js
+./minify
 cd - > /dev/null
 
 echo 'Minifying css...'
