--- a/frege/build
+++ b/frege/build
@@ -6,7 +6,7 @@ echo 'Building...'
 echo 'Minifying js...'
 cd /home/eliranh/frege/frege2/frege/logic/static/logic/js
 uglifyjs requests.js -m toplevel -c -r 'ans,sbt,errmsg' > requests.min.js
-uglifyjs deduction.js -m toplevel -c -r 'oncheck,addRow' > deduction.min.js
+uglifyjs deduction.js -m toplevel -c -r 'oncheck,addRow,dd' > deduction.min.js
 ./minify
 cd - > /dev/null
 
